fix: correct background color for select dropdown on small screens

--- a/src/shared/ui/SelectDropdown/SelectDropdown.scss
+++ b/src/shared/ui/SelectDropdown/SelectDropdown.scss
@@ -48,6 +48,7 @@
     padding: 10px;
     cursor: pointer;
     transition: background 0.2s;
+    background: var(--mobile-btn-select-bg);
 
     &--active {
       background: $rose;
@@ -108,7 +109,6 @@
       padding: 0;
       list-style: none;
       overflow: hidden;
-      background-color: transparent;
     }
     &__item {
       display: flex;
